# IWM_stock_analysis

./: .gitignore  README.md  main.py  pyproject.toml
pages/: ai_strategy.py  options_strategy.py  price_factors.py
utils/: ai_strategy_analyzer.py  data_fetcher.py  google_finance.py  market_watch.py  ml_predictor.py  options_analyzer.py  price_factors_analyzer.py  sentiment_analyzer.py  share_manager.py
