[project]
name = "repl-nix-stockinsighttracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "textblob>=0.18.0.post0",
    "yfinance>=0.2.51",
]
