[project]
name = "repl-nix-stockinsighttracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "openai>=1.59.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "quandl>=3.7.0",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "textblob>=0.18.0.post0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.51",
]
